add rss feature

--- a/source/_posts/123.md
+++ b/source/_posts/123.md
@@ -1,6 +1,9 @@
 ---
 title: page
 date: 2020-07-01 22:15:32
-tags:
+tags: 
+    - tag1  
+    - tag2
+categories: category1
 ---
 test12312314123124412412
